# rune

./: .gitignore  CLAUDE.md  PARITY.md  PHILOSOPHY.md  README.md  ROADMAP.md  USAGE.md  demo.tape
.github/workflows/: rust-ci.yml
assets/: demo.tape
docs/: index.html  script.js  styles.css
rust/: .gitignore  PARITY.md  README.md
rust/.omc/plans/: tui-enhancement-plan.md
rust/.runed-agents/: agent-1775472501552460000.json  agent-1775472501552460000.md  agent-1775472501690546000.json  agent-1775472501690546000.md
rust/crates/api/src/: client.rs  prompt_cache.rs  types.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/src/: lib.rs
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/rune-tui/: Cargo.toml
rust/crates/rune-tui/src/: app.rs  event.rs  main.rs  runtime_bridge.rs  ui.rs
rust/crates/rune-tui/src/widgets/: markdown.rs  mod.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: bootstrap.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  lane_events.rs  lib.rs  lsp_client.rs  mcp.rs  mcp_lifecycle_hardened.rs  mcp_tool_bridge.rs  oauth.rs  permission_enforcer.rs  plugin_lifecycle.rs  prompt.rs  recovery_recipes.rs  remote.rs  sandbox.rs  session_control.rs  stale_branch.rs  task_packet.rs  task_registry.rs  team_cron_registry.rs  worker_boot.rs
rust/crates/runtime/tests/: integration_tests.rs
rust/crates/rusty-claude-cli/: Cargo.toml
rust/crates/tools/: .gitignore
scripts/: rune-upstream-check.sh
(+24 files in other folders)
