[package]
name = "rune-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "rune-tui"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
commands = { path = "../commands" }
plugins = { path = "../plugins" }
runtime = { path = "../runtime" }
tools = { path = "../tools" }

crossterm = "0.28"
pulldown-cmark = "0.13"
ratatui = "0.29"
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }

[lints]
workspace = true
